--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,10 @@ jobs:
           # The root LaTeX file to be compiled
           root_file: resume.tex
           # The working directory for the latex compiler to be invoked
-          working_directory: resume/
+          working_directory: /
           args: -xelatex -latexoption=-file-line-error -latexoption=-interaction=nonstopmode
 
       - uses: actions/upload-artifact@v3
         with:
           name: resume.pdf
-          path: resume/resume.pdf
+          path: resume.pdf
